--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          # cache: "npm"
+          cache: "pnpm"
           
       - uses: denoland/setup-deno@v1
         with:
@@ -34,13 +34,13 @@ jobs:
           key: ${{ runner.os }}-deno-${{ hashFiles('deno.lock') }}
 
       - name: Install dependencies
-        run: rm -rf node_modules && npm ci
+        run: rm -rf node_modules && pnpm install
 
       - name: Build types
-        run: npm run build-types
+        run: pnpm run build-types
 
       - name: Build binary
-        run: npm run build:binary
+        run: pnpm run build:binary
           
       - name: Save Deno Cache
         uses: actions/cache/save@v4
@@ -56,9 +56,6 @@ jobs:
 
       - name: Create archive of work
         if: ${{ matrix.os == 'ubuntu-latest' }}
-        # We need to ignore the exit code of tar because it will exit with 1 if
-        # a file is being written to while tar is trying to read it. This is
-        # expected behavior and we don't want to fail the build because of it.
         run: |
           set +e
           tar -czpf work.tar.gz .
@@ -87,7 +84,7 @@ jobs:
         - uses: actions/setup-node@v4
           with:
             node-version: 20
-            cache: "npm"
+            cache: "pnpm"
             
         - uses: denoland/setup-deno@v1
           with:
@@ -103,7 +100,7 @@ jobs:
           run: tar -xzpf work.tar.gz
 
         - name: Build packages
-          run: npm run build:packages
+          run: pnpm run build:packages
 
         - name: Get VSIX
           id: vsix
@@ -116,9 +113,6 @@ jobs:
             path: ${{ steps.vsix.outputs.artifact }}
 
         - name: Create archive of work
-          # We need to ignore the exit code of tar because it will exit with 1 if
-          # a file is being written to while tar is trying to read it. This is
-          # expected behavior and we don't want to fail the build because of it.
           run: |
             set +e
             tar -czpf work.tar.gz .
@@ -134,437 +128,3 @@ jobs:
             name: work-ubuntu-latest
             path: work.tar.gz
             retention-days: 1
-
-  # Check whether this commit is related to a PR or if the commit message references an issue
-  check_is_pr_or_issue:
-    runs-on: ubuntu-latest
-    outputs:
-      should_run: ${{ steps.check_pr_or_issue.outputs.should_run }}
-      issue_number: ${{ steps.check_pr_or_issue.outputs.issue_number }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-      - name: Check for PR or Issue
-        id: check_pr_or_issue
-        run: |
-          ISSUE_ID="$(git log --format=%B -n 1 ${{ github.sha }} | grep -Eo '#[0-9]+' | awk 'NR==1{ print $1 }' | tr -d '#')"
-          SHOULD_RUN="no"
-          if [[ ! -z "${{ github.event.pull_request.number }}" || ! -z "$ISSUE_ID" ]]; then
-            SHOULD_RUN="yes"
-          fi
-          echo "should_run=$SHOULD_RUN" >> "$GITHUB_OUTPUT"
-          echo "issue_number=$ISSUE_ID" >> "$GITHUB_OUTPUT"
-
-  # Check whether this is a release
-  check_is_release:
-    runs-on: ubuntu-latest
-    outputs:
-      is_release: ${{ steps.check_release.outputs.is_release }}
-      version: ${{ steps.check_release.outputs.version }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
-      - name: Check for Release
-        id: check_release
-        run: |
-          VERSION=$(node -p "require('./package.json').version")
-          echo "Version: $VERSION"
-          IS_RELEASE="no"
-          if [[ $(echo $VERSION | awk -F. '{print $3}') == "0" ]]; then
-            IS_RELEASE="yes"
-            echo "This is a final release"
-          fi
-          echo "is_release=$IS_RELEASE" >> "$GITHUB_OUTPUT"
-          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
-  
-  # Gather package info for publishing
-  gather-package-info:
-    runs-on: ubuntu-latest
-    outputs:
-      taggedPackages: ${{ steps.gather-packages.outputs.taggedPackages }}
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Gather package info
-      id: gather-packages
-      run: |
-        PACKAGES=$(npx lerna list --json)
-        TAGGED_PACKAGES=()
-        
-        for pkg in $(echo "${PACKAGES}" | jq -r '.[] | @base64'); do
-          pkg_name=$(echo "$pkg" | base64 --decode | jq -r '.name')
-          pkg_location=$(echo "$pkg" | base64 --decode | jq -r '.location')
-          pkg_tag=$(jq -r '.tag // "auto"' < "$pkg_location/package.json")
-          
-          TAGGED_PACKAGES+=("{\"name\":\"$pkg_name\",\"tag\":\"$pkg_tag\",\"location\":\"$pkg_location\"}")
-          TAGGED_PACKAGES_JSON="[$(IFS=,; echo "${TAGGED_PACKAGES[*]}")]"
-        done
-        echo $TAGGED_PACKAGES_JSON
-        echo "taggedPackages=$TAGGED_PACKAGES_JSON" >> "$GITHUB_OUTPUT"
-          
-  # Publish NPM packages to Github Packages
-  publish-packages:
-    needs: [build-packages, check_is_release, gather-package-info]
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        package: ${{fromJson(needs.gather-package-info.outputs.taggedPackages)}}
-    steps:
-      - name: Download work archive
-        uses: actions/download-artifact@v3
-        with:
-          name: work-ubuntu-latest
-          path: .
-
-      - name: Extract work archive
-        run: tar -xzpf work.tar.gz
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "npm"
-           
-      # Publish packages
-      - name: Publish to npm
-        run: |
-          export HUSKY=0
-          rm work.tar.gz
-          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
-          git config --global user.email "mweichert@gmail.com"
-          git config --global user.name "Michael Weichert"
-          git commit -am "chore: publish packages" --allow-empty
-          
-          # Determine the appropriate NPM tag for publishing
-          # If the "tag" property from package.json is set to "auto",
-          # we rely on the "is_release" flag.
-          # Otherwise, we use the specified tag in package.json which should be set to "beta", "alpha", etc.
-          TAG=${{ matrix.package.tag }}
-          if [ "$TAG" == "auto" ]; then
-            TAG="dev"
-            if [[ "${{ needs.check_is_release.outputs.is_release }}" == "yes" ]]; then
-              TAG="latest"
-            fi
-          fi
-  
-          # Navigate to package directory
-          cd ${{ matrix.package.location }}
-    
-          # Publish using npm with the determined tag
-          npm publish --tag $TAG
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-  # Publish website
-  publish-website:
-    needs: [build-binaries, check_is_release]
-    runs-on: ubuntu-latest
-    env:
-      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-      TAQ_VERSION: ${{ needs.check_is_release.outputs.version }}
-    steps:
-      - name: Download work archive
-        uses: actions/download-artifact@v3
-        with:
-          name: work-ubuntu-latest
-          path: .
-
-      - name: Extract work archive
-        run: tar -xzpf work.tar.gz
-
-      - name: Build Website
-        run: |
-           npm run build-website
-      
-      - name: Publish Website (Preview)
-        id: publish-website-preview
-        if: needs.check_is_release.outputs.is_release == 'no'
-        run: cd website && npm run deploy-preview
-
-      - name: Publish Website (Production)
-        id: publish-website
-        if: needs.check_is_release.outputs.is_release == 'yes'
-        run: cd website && npm run deploy
-          
-  # Publish binaries to Github Releases
-  publish-release:
-    needs: [build-binaries, build-packages, check_is_release]
-    if: needs.check_is_release.outputs.is_release == 'yes'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download taq binary for Linux
-        uses: actions/download-artifact@v3
-        with:
-          name: taq-ubuntu-latest
-          path: taq-linux
-
-      - name: Download taq binary for MacOS
-        uses: actions/download-artifact@v3
-        with:
-          name: taq-macos-latest
-          path: taq-macos
-      
-      - name: Download vscode extension
-        uses: actions/download-artifact@v3
-        with:
-          name: taqueria.vsix
-          path: vscode-extension
-
-      - name: Get VSIX
-        id: vsix
-        run: echo "artifact=$(ls vscode-extension/)" >> "$GITHUB_OUTPUT"
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: v${{ needs.check_is_release.outputs.version }}
-          release_name: v${{ needs.check_is_release.outputs.version }}
-          draft: true
-          prerelease: false
-
-      - name: Upload Linux binary
-        id: upload-linux-binary
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: taq-linux/taq
-          asset_name: taq-linux
-          asset_content_type: application/octet-stream
-
-      - name: Upload MacOS binary
-        id: upload-macos-binary
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: taq-macos/taq
-          asset_name: taq-macos
-          asset_content_type: application/octet-stream
-
-      - name: Upload VSCode Extension
-        id: upload-vsix
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: vscode-extension/${{ steps.vsix.outputs.artifact }}
-          asset_name: taqueria.vsix
-          asset_content_type: application/octet-stream
-
-  publish-vscode:
-    needs: [build-packages, check_is_release]
-    if: needs.check_is_release.outputs.is_release == 'yes'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download vscode extension
-        uses: actions/download-artifact@v3
-        with:
-          name: taqueria.vsix
-          path: vscode-extension
-
-      - name: Get VSIX
-        id: vsix
-        run: echo "artifact=$(ls vscode-extension/)" >> "$GITHUB_OUTPUT"
-      
-      - name: Publish to Marketplace
-        uses: HaaLeo/publish-vscode-extension@v1
-        with:
-          pat: ${{ secrets.VSCODE_MARKETPLACE_PAT }}
-          extensionFile: vscode-extension/${{ steps.vsix.outputs.artifact }}
-          preRelease: false
-          registryUrl: https://marketplace.visualstudio.com
-
-
-  # Add comment with published artifacts and packages
-  update-comment:
-    needs: [publish-packages, check_is_pr_or_issue]
-    if: needs.check_is_pr_or_issue.outputs.should_run == 'yes'
-    runs-on: ubuntu-latest
-    steps: 
-      - name: Download work archive
-        uses: actions/download-artifact@v3
-        with:
-          name: work-ubuntu-latest
-          path: .
-  
-      - name: Extract work archive
-        run: tar -xzpf work.tar.gz
-  
-      - name: Get version
-        id: get_version
-        run: |
-          VERSION=$(node -p "require('./package.json').version")
-          echo "VERSION=$VERSION" >> "$GITHUB_OUTPUT"
-  
-      - name: List Lerna Packages
-        id: list_packages
-        run: |
-          echo "PACKAGES<<EOF" >> $GITHUB_OUTPUT
-          npx lerna ls --json | jq -r '.[] | "| \(.name) | \(.version) |"' >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          
-      - name: Update or Create comment
-        uses: peter-evans/create-or-update-comment@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ github.repository }}
-          issue-number: ${{ github.event.pull_request.number || needs.check_is_pr_or_issue.outputs.issue_number }}
-          body: |
-            ## Published Binaries & Packages
-  
-            | Published | Version |
-            | :--- | :--- |
-            | Taq Binary (MacOS) | [${{ steps.get_version.outputs.VERSION }}](https://github.com/${{ github.repository }}/actions/artifacts) |
-            | Taq Binary (Windows) | [${{ steps.get_version.outputs.VERSION }}](https://github.com/${{ github.repository }}/actions/artifacts) |
-            | VSIX for VSCode Extension | [${{ steps.get_version.outputs.VERSION }}](https://github.com/${{ github.repository }}/actions/artifacts) |
-            ${{ steps.list_packages.outputs.PACKAGES }}
-            <!-- Add more rows for additional packages -->
-  
-            > Note: You can install the latest development version of a package with `taq install @taqueria/[packageName]@dev`.
-  
-          edit-mode: replace
-
-  list-e2e-tests:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: List .spec.ts files
-        id: list
-        run: echo "files=$(ls tests/e2e/*.spec.ts | jq -R -s -c 'split("\n")[:-1]')" >> "$GITHUB_OUTPUT"
-
-      - name: Set matrix for next job
-        id: set-matrix
-        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
-
-      - name: Debug
-        run: echo ${{fromJson(steps.set-matrix.outputs.matrix)}}
-
-  run-e2e-tests:
-    needs:
-      - list-e2e-tests
-      - build-packages
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{fromJson(needs.list-e2e-tests.outputs.matrix)}}
-    steps:
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.11'
-      - name: Download work archive
-        uses: actions/download-artifact@v3
-        with:
-          name: work-ubuntu-latest
-          path: .
-
-      - name: Extract work archive
-        run: tar -xzpf work.tar.gz
-
-      - name: Run tests
-        env:
-          HUSKY_SKIP_INSTALL: 1
-          HUSKY: 0
-        run: |
-          CWD=$(pwd)
-          export PATH=$PATH:$CWD
-          npm run test:e2e -w tests ${{ matrix.spec }}
-
-  list-integration-tests:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: List .spec.ts files
-        id: list
-        run: echo "files=$(ls tests/integration/*.spec.ts | jq -R -s -c 'split("\n")[:-1]')" >> "$GITHUB_OUTPUT"
-
-      - name: Set matrix for next job
-        id: set-matrix
-        run: echo 'matrix={"spec":${{ steps.list.outputs.files }}}' >> "$GITHUB_OUTPUT"
-
-      - name: Debug
-        run: echo ${{fromJson(steps.set-matrix.outputs.matrix)}}
-
-  run-integration-tests:
-    needs:
-      - list-integration-tests
-      - build-packages
-    runs-on: ubuntu-latest
-    strategy:
-      matrix: ${{fromJson(needs.list-integration-tests.outputs.matrix)}}
-    steps:
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Download work archive
-        uses: actions/download-artifact@v3
-        with:
-          name: work-ubuntu-latest
-          path: .
-
-      - name: Extract work archive
-        run: tar -xzpf work.tar.gz
-
-      - name: Run tests
-        env:
-          HUSKY_SKIP_INSTALL: 1
-          HUSKY: 0
-        run: |
-          CWD=$(pwd)
-          export PATH=$PATH:$CWD
-          npm run test:integration -w tests ${{ matrix.spec }}
-
-  # Run all unit tests
-  run-unit-tests:
-    needs:
-      - build-binaries
-      - build-packages
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
-
-      - name: Download work archive
-        uses: actions/download-artifact@v3
-        with:
-          name: work-ubuntu-latest
-          path: .
-
-      - name: Extract work archive
-        run: tar -xzpf work.tar.gz
-
-      - name: Run tests
-        env:
-          HUSKY_SKIP_INSTALL: 1
-          HUSKY: 0
-          npm_config_loglevel: silly
-        run: |
-          CWD=$(pwd)
-          export PATH=$PATH:$CWD
-          export DENO_DIR=$CWD/.deno
-          npm run test:unit -w tests
