--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-core",
-	"version": "0.56.17",
+	"version": "0.56.18",
 	"description": "A taqueria plugin for core tasks",
 	"targets": {
 		"default": {
@@ -43,7 +43,7 @@
 		"typescript": "^5.6.2"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.17"
+		"@taqueria/node-sdk": "workspace:*"
 	},
 	"tsup": {
 		"entry": [
