--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-flextesa",
-	"version": "0.56.17",
+	"version": "0.56.18",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on Flextesa",
 	"keywords": [
 		"taqueria",
@@ -34,8 +34,8 @@
 		"directory": "taqueria-plugin-flextesa"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.17",
-		"@taqueria/protocol": "^0.56.17",
+		"@taqueria/node-sdk": "workspace:*",
+		"@taqueria/protocol": "workspace:*",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
 		"fast-glob": "^3.3.2",
