--- a/taqueria-plugin-octez-client/package.json
+++ b/taqueria-plugin-octez-client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-octez-client",
-	"version": "0.56.17",
+	"version": "0.56.18",
 	"description": "A taqueria plugin for utilizing octez-client",
 	"targets": {
 		"default": {
@@ -41,7 +41,7 @@
 	},
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.17",
+		"@taqueria/node-sdk": "workspace:*",
 		"fast-glob": "^3.3.2"
 	},
 	"devDependencies": {
