--- a/taqueria-plugin-tezbox/package.json
+++ b/taqueria-plugin-tezbox/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tezbox",
-	"version": "0.56.17",
+	"version": "0.56.18",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on TezBox",
 	"private": true,
 	"keywords": [
@@ -35,8 +35,8 @@
 		"directory": "taqueria-plugin-tezbox"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.56.17",
-		"@taqueria/protocol": "^0.56.17",
+		"@taqueria/node-sdk": "workspace:*",
+		"@taqueria/protocol": "workspace:*",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.2",
 		"fast-glob": "^3.3.2",
