--- a/taqueria-lib-ligo/tsconfig.json
+++ b/taqueria-lib-ligo/tsconfig.json
@@ -4,7 +4,7 @@
 
 		/* Projects */
 		// "incremental": true,                              /* Enable incremental compilation */
-		// "composite": true,                                /* Enable constraints that allow a TypeScript project to be used with project references. */
+		"composite": true, /* Enable constraints that allow a TypeScript project to be used with project references. */
 		// "tsBuildInfoFile": "./",                          /* Specify the folder for .tsbuildinfo incremental compilation files. */
 		// "disableSourceOfProjectReferenceRedirect": true,  /* Disable preferring source files instead of declaration files when referencing composite projects */
 		// "disableSolutionSearching": true,                 /* Opt a project out of multi-project reference checking when editing. */
@@ -28,9 +28,12 @@
 		/* Modules */
 		"module": "CommonJS", /* Specify what module code is generated. */
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
-		// "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
+		"moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
 		// "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
-		// "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
+		"paths": {
+			"@taqueria/node-sdk/*": ["../taqueria-sdk/*"],
+			"@taqueria/protocol/*": ["../taqueria-protocol/*"]
+		}, /* Specify a set of entries that re-map imports to additional lookup locations. */
 		// "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
 		// "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
 		// "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
@@ -99,5 +102,13 @@
 		/* Completeness */
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
-	}
+	},
+	"references": [
+		{
+			"path": "../taqueria-sdk"
+		},
+		{
+			"path": "../taqueria-protocol"
+		}
+	]
 }
