--- a/taqueria-plugin-archetype/package.json
+++ b/taqueria-plugin-archetype/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-archetype",
-	"version": "0.56.28",
+	"version": "0.56.29",
 	"description": "A taqueria plugin for compiling Archetype smart contracts",
 	"targets": {
 		"default": {
@@ -45,6 +45,7 @@
 		"ts-pattern": "^5.4.0"
 	},
 	"devDependencies": {
+		"@types/node": "^22.7.5",
 		"tsup": "^8.3.0",
 		"typescript": "^5.6.2"
 	},
