--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-core",
-	"version": "0.56.28",
+	"version": "0.56.29",
 	"description": "A taqueria plugin for core tasks",
 	"targets": {
 		"default": {
@@ -39,6 +39,7 @@
 	},
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"devDependencies": {
+		"@types/node": "^22.7.5",
 		"tsup": "^8.3.0",
 		"typescript": "^5.6.2"
 	},
