--- a/taqueria-plugin-helloworld/package.json
+++ b/taqueria-plugin-helloworld/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-helloworld",
-	"version": "0.56.28",
+	"version": "0.56.29",
 	"description": "An example of a plugin for Taqueria",
 	"main": "index.js",
 	"scripts": {
@@ -15,6 +15,7 @@
 	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"devDependencies": {
+		"@types/node": "^22.7.5",
 		"tsup": "^8.3.0",
 		"typescript": "^5.6.2"
 	},
