--- a/taqueria-plugin-smartpy/package.json
+++ b/taqueria-plugin-smartpy/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-smartpy",
-	"version": "0.56.28",
+	"version": "0.56.29",
 	"description": "A taqueria plugin used to test and compile smart contracts written in SmartPy.",
 	"main": "index.js",
 	"targets": {
@@ -46,6 +46,7 @@
 		"fast-glob": "^3.3.2"
 	},
 	"devDependencies": {
+		"@types/node": "^22.7.5",
 		"tsup": "^8.0.1",
 		"typescript": "^5.3.3"
 	},
