--- a/taqueria-plugin-taquito/tsconfig.json
+++ b/taqueria-plugin-taquito/tsconfig.json
@@ -100,5 +100,10 @@
 		/* Completeness */
 		// "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
 		"skipLibCheck": true /* Skip type checking all .d.ts files. */
-	}
+	},
+	"references": [
+		{
+			"path": "../taqueria-sdk"
+		}
+	]
 }
