--- a/taqueria-plugin-tzcompose/package.json
+++ b/taqueria-plugin-tzcompose/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-tzcompose",
-	"version": "0.56.28",
+	"version": "0.56.29",
 	"description": "A TzCompose plugin for Taqueria using the GoTz SDK",
 	"main": "index.js",
 	"scripts": {
@@ -17,11 +17,13 @@
 	"author": "Taqueria",
 	"license": "Apache-2.0",
 	"devDependencies": {
+		"@types/node": "^22.7.5",
 		"tsup": "^8.3.0",
 		"typescript": "^5.6.2"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "workspace:*"
+		"@taqueria/node-sdk": "workspace:*",
+		"@taquito/signer": "^21.0.0-beta.0"
 	},
 	"tsup": {
 		"entry": [
