--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "@taqueria/protocol",
-	"version": "0.56.28",
+	"version": "0.56.29",
 	"description": "A TypeScript package which contains types that are to be shared between @taqueria/node-sdk and @taqueria/taqueria.",
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx tsc --emitDeclarationOnly -p ./tsconfig.json && npx tsup",
-		"build-types": "npx ts-to-zod types.ts out/types-zod.ts && npx ts-node scripts/post-ts-to-zod.ts && npx ts-node scripts/build-types.ts"
+		"clean": "rm -f tsconfig.tsbuildinfo  *.js *.d.ts *.map out/*.js out/*.d.ts out/*.map out/types/*.js out/types/*.d.ts out/types/*.map",
+		"build": "pnpm run clean && pnpm exec tsc --emitDeclarationOnly -p ./tsconfig.json && pnpm exec tsup",
+		"build-types": "pnpm exec ts-to-zod types.ts out/types-zod.ts && pnpm exec ts-node scripts/post-ts-to-zod.ts && pnpm exec ts-node scripts/build-types.ts"
 	},
 	"keywords": [
 		"taqueria",
@@ -31,7 +32,7 @@
 	"homepage": "https://github.com/tezostaqueria/taqueria#readme",
 	"devDependencies": {
 		"@bevry/jsonfile": "^1.3.0",
-		"@types/node": "^20.11.10",
+		"@types/node": "^20.16.10",
 		"@types/project-name-generator": "^2.1.3",
 		"@types/shell-quote": "^1.7.5",
 		"esbuild-plugin-text-replace": "^1.3.0",
@@ -320,6 +321,7 @@
 		"@taquito/taquito": "^21.0.0-beta.0",
 		"@taquito/utils": "^21.0.0-beta.0",
 		"batching-toposort": "^1.2.0",
+		"esbuild": "^0.20.0",
 		"fluture": "^14.0.0",
 		"i18next": "^23.15.1",
 		"node-fetch": "^3.3.2",
