Added pnpm to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
       DENO_DIR: ./.deno
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "pnpm"
+      - uses: pnpm/action-setup@v4
           
       - uses: denoland/setup-deno@v1
         with:
@@ -85,6 +85,7 @@ jobs:
           with:
             node-version: 20
             cache: "pnpm"
+        - uses: pnpm/action-setup@v4
             
         - uses: denoland/setup-deno@v1
           with:
